@@ -97,6 +97,9 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
     
+    TAJO-978: RoundFloat8 should return Float8Datum type. (Hyoungjun Kim via 
+    hyunsik)
+
     TAJO-957: ROUND should be support INT parameter. (Mai Hai Thanh via hyunsik)
 
     TAJO-980: execution page in Web UI broken. (hyunsik)
